# GKPY-pipi

./: CMakeLists.txt  README.md
executables/: print_PW.cpp
include/: constants.hpp  gauleg.hpp  omnes.hpp  pipi.hpp
src/: gauleg.cpp  pipi.cpp
